fix alice agent docker config

--- a/docker/alice-shopping-agent/Dockerfile
+++ b/docker/alice-shopping-agent/Dockerfile
@@ -9,8 +9,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy everything
 COPY alice_agent.py start_simple.py ./
 
-# Set unbuffered output
+# Set environment variables
 ENV PYTHONUNBUFFERED=1
+ENV PORT=8080
 
-# Simple CMD - no complex ENTRYPOINT
+# Expose port for EigenCompute routing
+EXPOSE 8080
+
+# Start the application
 CMD ["python", "-u", "/app/start_simple.py"]
